Fix letter width on small screen

--- a/static/style.css
+++ b/static/style.css
@@ -126,6 +126,10 @@ div.letter {
         padding: 2vw;
         margin: 0.5vw;
     }
+
+    div.letter {
+        width: 15vw;
+    }
 }
 
 #keyboard .wrong {
